--- a/Excel2Db/packages.config
+++ b/Excel2Db/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aerie.AdoUtil" version="1.0.0" targetFramework="net461" />
   <package id="ExcelDataReader" version="3.4.2" targetFramework="net461" />
   <package id="ExcelDataReader.DataSet" version="3.4.2" targetFramework="net461" />
 </packages>
