--- a/Excel2Db/ExcelLoader.Library.nuspec
+++ b/Excel2Db/ExcelLoader.Library.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Aerie.ExceUploader</id>
+    <id>Aerie.ExcelLoader</id>
     <version>$version$</version>
     <title>$title$</title>
     <authors>$author$</authors>
