--- a/Excel2Db/ExcelLoader.Library.csproj
+++ b/Excel2Db/ExcelLoader.Library.csproj
@@ -7,11 +7,12 @@
     <ProjectGuid>{DD0E9642-8E33-4AC8-A92D-4C18EAA3B057}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Excel2Db</RootNamespace>
-    <AssemblyName>Excel2Db</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>AerieEngineering</RootNamespace>
+    <AssemblyName>Aerie.ExcelLoader</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
