package update, changed target framework

--- a/Excel2Db/ExcelLoader.Library.csproj
+++ b/Excel2Db/ExcelLoader.Library.csproj
@@ -32,8 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AdoUtil.Library, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Aerie.AdoUtil.1.0.0\lib\net461\AdoUtil.Library.dll</HintPath>
+    <Reference Include="Aerie.AdoUtil, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Aerie.AdoUtil.1.0.1\lib\net45\Aerie.AdoUtil.dll</HintPath>
     </Reference>
     <Reference Include="ExcelDataReader, Version=3.4.2.0, Culture=neutral, PublicKeyToken=93517dbe6a4012fa, processorArchitecture=MSIL">
       <HintPath>..\packages\ExcelDataReader.3.4.2\lib\net45\ExcelDataReader.dll</HintPath>
